Добавляет изменение обработки ошибок

--- a/src/templates/country.hbs
+++ b/src/templates/country.hbs
@@ -1,4 +1,4 @@
-<article class="country-card">
+<section class="country-card">
   <h1 class="title">{{name}}</h1>
   <div class="wrapper">
     <div class="detail">
@@ -12,6 +12,6 @@
         </ul>
       </p>
     </div>
-    <img class="flag" src="{{flag}}" alt="Flag of {{name}}">
+    <img class="flag" src="{{flag}}" alt="{{name}} flag">
   </div>
-</article>
+</section>
