--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -41,10 +41,12 @@ body {
   position: relative;
   font-size: 18px;
   transition: 0.3s linear;
+  box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    0px 1px 1px rgba(0, 0, 0, 0.12);
 }
-.search-bar:focus {
+/* .search-bar:focus {
   width: 320px;
-}
+} */
 
 .container {
   display: flex;
@@ -87,6 +89,10 @@ body {
 }
 .languages-list {
   padding-left: 30px;
+}
+.countries-list-item:hover {
+  cursor: pointer;
+  color: #8d54df;
 }
 .wrapper {
   display: flex;
