--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@200;400;700&display=swap');
-/* @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@200;400;700&family=Neuton:wght@300;400;700&display=swap'); */
 
 html {
   box-sizing: border-box;
@@ -18,7 +17,7 @@ ul {
 
 body {
   background-color: rgba(240, 240, 255, 0.4);
-  background-image: url('../../src/images/world-map.svg');
+  /* background-image: url('../../src/images/world-map.svg'); */
   background-attachment: fixed;
   background-size: cover;
   background-position: center;
@@ -49,19 +48,24 @@ body {
 } */
 
 .container {
+  position: relative;
   display: flex;
   justify-content: center;
   padding: 0 20px;
   font-family: 'Kanit', serif;
   font-weight: 200;
   font-size: 28px;
+  z-index: 10;
 }
+
 .countries-list-item {
   margin-bottom: 5px;
 }
+
 .section {
   width: 100%;
 }
+
 .title {
   margin-top: 0px;
   margin-right: auto;
@@ -71,41 +75,64 @@ body {
   font-weight: 700;
   font-size: 42px;
 }
+
 .detail {
   margin-right: 50px;
 }
+
 .detail-item {
   display: flex;
   flex-wrap: wrap;
   margin-top: 5px;
   margin-bottom: 5px;
 }
+
 .detail-title {
   font-weight: 400;
   margin-right: 10px;
 }
+
 .detail-text {
   font-weight: 200;
 }
+
 .languages-list {
   padding-left: 30px;
 }
+
 .countries-list-item:hover {
   cursor: pointer;
   color: #8d54df;
 }
+
 .wrapper {
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
 .flag {
-  max-width: 500px;
+  max-width: 300px;
   /* flex-basis: 100%; */
   /* height: 100%; */
   width: 100%;
-  min-width: 200px;
+  min-width: 100px;
+  opacity: 0.7;
 }
+
+.map-wrapper {
+  position: absolute;
+  /* top: 100px;
+  left: -10%; */
+  top: 100px;
+  left: -50px;
+}
+
+.map {
+  width: 100%;
+  height: 100%;
+}
+
 @media (max-width: 480px) {
   .wrapper {
     flex-wrap: wrap;
