--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -17,7 +17,6 @@ ul {
 
 body {
   background-color: rgba(240, 240, 255, 0.4);
-  /* background-image: url('../../src/images/world-map.svg'); */
   background-attachment: fixed;
   background-size: cover;
   background-position: center;
@@ -129,6 +128,7 @@ body {
 }
 
 .map {
+  /* background-image: url('../images/world.svg'); */
   width: 100%;
   height: 100%;
 }
